--- a/Develop/index.html
+++ b/Develop/index.html
@@ -45,7 +45,7 @@
             <!--This is the container for search-engine optimization content-->
             <div class="search-engine-optimization">
 
-                <img src="./assets/images/search-engine-optimization.jpg" alt="SEO notebad with office desk layout" class="float-left" />
+                <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg" class="float-left" />
 
                 <h2>Search Engine Optimization</h2>
 
@@ -58,7 +58,7 @@
             <!--This is the container for online reputation management-->
             <div id="online-reputation-management" class="online-reputation-management">
 
-                <img src="./assets/images/online-reputation-management.jpg" alt="man viewing computer graph" class="float-right" />
+                <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="float-right" />
 
                 <h2>Online Reputation Management</h2>
 
@@ -71,7 +71,7 @@
             <!--This is the container for social media marketing-->
             <div id="social-media-marketing" class="social-media-marketing">
 
-                <img src="./assets/images/social-media-marketing.jpg" alt="social media stuff" class="float-left" />
+                <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" class="float-left" />
 
                 <h2>Social Media Marketing</h2>
 
@@ -91,7 +91,7 @@
 
                 <h3>Lead Generation</h3>
 
-                <img src="./assets/images/lead-generation.png" alt="funnel and money icon" />
+                <img src="./assets/images/lead-generation.png" alt="lead-generation.png" />
 
                     <p>
                         Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -104,7 +104,7 @@
 
                 <h3>Brand Awareness</h3>
 
-                <img src="./assets/images/brand-awareness.png" alt="lightbulb icon" />
+                <img src="./assets/images/brand-awareness.png" alt="brand-awareness.png" />
 
                     <p>
                         Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -117,7 +117,7 @@
 
                 <h3>Cost Management</h3>
 
-                <img src="./assets/images/cost-management.png" alt="cost and gear icon"/>
+                <img src="./assets/images/cost-management.png" alt="cost-management.png"/>
 
                     <p>
                         As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
