added nav semantic tag to html, further consolidated styling by element selector in csss

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -15,7 +15,8 @@
 
           <h1>Hori<span class="seo">seo</span>n</h1>
 
-            <div>
+            <nav>
+                
                 <ul>
 
                     <li>
@@ -32,7 +33,7 @@
 
                 </ul>
 
-            </div>
+            </nav>
 
         </header>
 
