some minor semantic changes and creating a home base before experimenting further

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -15,9 +15,10 @@
 
           <h1>Hori<span class="seo">seo</span>n</h1>
 
+            <!--This is the navigation list container sitting within the header-->
             <nav>
-                
-                <ul>
+
+                <ul class="float-right>
 
                     <li>
                         <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -37,11 +38,11 @@
 
         </header>
 
-        <!--This is the main image when you land on the side of people working-->
+        <!--This is a big container that calls an image background specified in css for the hero class-->
         <div class="hero"></div> 
 
-        <!--This is the content container for seo, online rep management and social media marketing. It sits left of the benefits container-->
-        <div class="content"> 
+        <!--This is the sectin container for main site content seo, rep mgmt and social media marketing-->
+        <section class="content"> 
 
             <!--This is the container for search-engine optimization content-->
             <div class="search-engine-optimization">
@@ -82,12 +83,12 @@
 
             </div>
 
-        </div>
+        </section>
 
-        <!--This is the container for benefits lead gen, brand awareness, cost management that sits right of the content-->
-        <div class="benefits">
+        <!--This is the aside container for benefits lead gen, brand awareness, cost management that sits to the right aside the main content sectoin-->
+        <aside class="benefits">
 
-            <!--This is the container for lead generation benefit -->
+            <!--This is the container for lead generation benefit within the aside-->
             <div class="benefit-lead">
 
                 <h3>Lead Generation</h3>
@@ -100,7 +101,7 @@
 
             </div>
 
-            <!--This is the container for brand awareness benefit-->
+            <!--This is the container for brand awareness benefit within the aside-->
             <div class="benefit-brand">
 
                 <h3>Brand Awareness</h3>
@@ -113,7 +114,7 @@
 
             </div>
 
-            <!--This is the container for cost management benefits-->
+            <!--This is the container for cost management benefits within the aside-->
             <div class="benefit-cost">
 
                 <h3>Cost Management</h3>
@@ -126,7 +127,7 @@
 
             </div>
 
-        </div>
+        </aside>
 
         <!--This is the container for the footer-->
         <footer class="footer">
