--- a/Develop/index.html
+++ b/Develop/index.html
@@ -18,7 +18,7 @@
             <!--This is the navigation list container sitting within the header-->
             <nav>
 
-                <ul class="float-right>
+                <ul class="float-right">
 
                     <li>
                         <a href="#search-engine-optimization">Search Engine Optimization</a>
