--- a/Develop/index.html
+++ b/Develop/index.html
@@ -45,9 +45,9 @@
         <section class="content"> 
 
             <!--This is the container for search-engine optimization content-->
-            <div class="search-engine-optimization">
+            <div class="content-box">
 
-                <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg" class="float-left" />
+                <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg" class="float-left" class="search-engine-optimization" />
 
                 <h2>Search Engine Optimization</h2>
 
@@ -58,9 +58,9 @@
             </div>
 
             <!--This is the container for online reputation management-->
-            <div id="online-reputation-management" class="online-reputation-management">
+            <div class="content-box">
 
-                <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="float-right" />
+                <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="float-left" />
 
                 <h2>Online Reputation Management</h2>
 
@@ -71,7 +71,7 @@
             </div>
 
             <!--This is the container for social media marketing-->
-            <div id="social-media-marketing" class="social-media-marketing">
+            <div class="content-box">
 
                 <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" class="float-left" />
 
