consolidated css class for benefit-box, applied to three divs within benefits aside

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -89,7 +89,7 @@
         <aside class="benefits">
 
             <!--This is the container for lead generation benefit within the aside-->
-            <div class="benefit-lead">
+            <div class="benefit-box">
 
                 <h3>Lead Generation</h3>
 
@@ -102,7 +102,7 @@
             </div>
 
             <!--This is the container for brand awareness benefit within the aside-->
-            <div class="benefit-brand">
+            <div class="benefit-box">
 
                 <h3>Brand Awareness</h3>
 
@@ -115,7 +115,7 @@
             </div>
 
             <!--This is the container for cost management benefits within the aside-->
-            <div class="benefit-cost">
+            <div class="benefit-box">
 
                 <h3>Cost Management</h3>
 
