--- a/Develop/index.html
+++ b/Develop/index.html
@@ -93,7 +93,7 @@
 
                 <h3>Lead Generation</h3>
 
-                <img src="./assets/images/lead-generation.png" alt="lead-generation.png" />
+                <img src="./assets/images/lead-generation.png" alt="lead-generation.png" class="benefit-img" />
 
                     <p>
                         Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -106,7 +106,7 @@
 
                 <h3>Brand Awareness</h3>
 
-                <img src="./assets/images/brand-awareness.png" alt="brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png" alt="brand-awareness.png" class="benefit-img" />
 
                     <p>
                         Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -119,7 +119,7 @@
 
                 <h3>Cost Management</h3>
 
-                <img src="./assets/images/cost-management.png" alt="cost-management.png"/>
+                <img src="./assets/images/cost-management.png" alt="cost-management.png" class="benefit-img"/>
 
                     <p>
                         As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
