--- a/Develop/index.html
+++ b/Develop/index.html
@@ -16,7 +16,7 @@
           <h1>Hori<span class="seo">seo</span>n</h1>
 
             <!--This is the navigation list container sitting within the header-->
-            <nav>
+            <nav class="nav">
 
                 <ul class="float-right">
 
@@ -47,11 +47,11 @@
             <!--This is the container for search-engine optimization content-->
             <div class="content-box">
 
-                <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg" class="float-left" class="search-engine-optimization" />
+                <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg"  class="content-img" class="float-left" />
 
                 <h2>Search Engine Optimization</h2>
 
-                    <p>
+                    <p class=".content-p">
                         The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                     </p>
 
@@ -60,7 +60,7 @@
             <!--This is the container for online reputation management-->
             <div class="content-box">
 
-                <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="float-left" />
+                <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="content-img" class="float-left"/>
 
                 <h2>Online Reputation Management</h2>
 
@@ -73,7 +73,7 @@
             <!--This is the container for social media marketing-->
             <div class="content-box">
 
-                <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" class="float-left" />
+                <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" class="content-img" class="float-left" />
 
                 <h2>Social Media Marketing</h2>
 
