added class for content image float r and deleted standalond float classes

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -47,7 +47,7 @@
             <!--This is the container for search-engine optimization content-->
             <div class="content-box">
 
-                <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg"  class="content-img" class="float-left" />
+                <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg"  class="content-img-l" class="float-left" />
 
                 <h2>Search Engine Optimization</h2>
 
@@ -60,7 +60,7 @@
             <!--This is the container for online reputation management-->
             <div class="content-box">
 
-                <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="content-img" class="float-left"/>
+                <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="content-img-r"/>
 
                 <h2>Online Reputation Management</h2>
 
@@ -73,7 +73,7 @@
             <!--This is the container for social media marketing-->
             <div class="content-box">
 
-                <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" class="content-img" class="float-left" />
+                <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" class="content-img-l" class="float-left" />
 
                 <h2>Social Media Marketing</h2>
 
