added class for header span, got rid of h1 general selector in css

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -13,7 +13,7 @@
         <!--This is the header container that includes the name and top bark links-->
         <header class="header"> 
 
-          <h1>Hori<span class="seo">seo</span>n</h1>
+          <h1 class="header-h1">Hori<span class="header-span">seo</span>n</h1>
 
             <!--This is the navigation list container sitting within the header-->
             <nav class="nav">
