removed 'a' selector by elemenet type, added nav class

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -21,15 +21,15 @@
                 <ul class="float-right">
 
                     <li>
-                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                        <a href="#search-engine-optimization" class="nav-a">Search Engine Optimization</a>
                     </li>
 
                     <li>
-                        <a href="#online-reputation-management">Online Reputation Management</a>
+                        <a href="#online-reputation-management" class="nav-a">Online Reputation Management</a>
                     </li>
 
                     <li>
-                        <a href="#social-media-marketing">Social Media Marketing</a>
+                        <a href="#social-media-marketing" class="nav-a">Social Media Marketing</a>
                     </li>
 
                 </ul>
