reduced element selector statements and added nav.li class. issue with a tag in html to be looked at later during linkes

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -18,17 +18,17 @@
             <!--This is the navigation list container sitting within the header-->
             <nav class="nav">
 
-                <ul class="float-right">
+                <ul>
 
-                    <li>
+                    <li class="nav-li"
                         <a href="#search-engine-optimization" class="nav-a">Search Engine Optimization</a>
                     </li>
 
-                    <li>
+                    <li class="nav-li">
                         <a href="#online-reputation-management" class="nav-a">Online Reputation Management</a>
                     </li>
 
-                    <li>
+                    <li class="nav-li">
                         <a href="#social-media-marketing" class="nav-a">Social Media Marketing</a>
                     </li>
 
@@ -91,7 +91,7 @@
             <!--This is the container for lead generation benefit within the aside-->
             <div class="benefit-box">
 
-                <h3>Lead Generation</h3>
+                <h3 class="benefit-h3">Lead Generation</h3>
 
                 <img src="./assets/images/lead-generation.png" alt="lead-generation.png" class="benefit-img" />
 
@@ -104,7 +104,7 @@
             <!--This is the container for brand awareness benefit within the aside-->
             <div class="benefit-box">
 
-                <h3>Brand Awareness</h3>
+                <h3 class="benefit-h3">Brand Awareness</h3>
 
                 <img src="./assets/images/brand-awareness.png" alt="brand-awareness.png" class="benefit-img" />
 
@@ -117,7 +117,7 @@
             <!--This is the container for cost management benefits within the aside-->
             <div class="benefit-box">
 
-                <h3>Cost Management</h3>
+                <h3 class="benefit-h3">Cost Management</h3>
 
                 <img src="./assets/images/cost-management.png" alt="cost-management.png" class="benefit-img"/>
 
@@ -132,7 +132,7 @@
         <!--This is the container for the footer-->
         <footer class="footer">
 
-            <h2>Made with ❤️️ by Horiseon</h2>
+            <h2 class="footer-h3">Made with ❤️️ by Horiseon</h2>
 
                 <p>
                     &copy; 2019 Horiseon Social Solution Services, Inc.
