--- a/Develop/index.html
+++ b/Develop/index.html
@@ -49,7 +49,7 @@
 
                 <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg"  class="content-img-l" class="float-left" />
 
-                <h2 class="content-h2">Search Engine Optimization</h2>
+                <h2 class="content-h2">Search Engine<br>Optimization</h2>
 
                     <p>
                         The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -62,7 +62,7 @@
 
                 <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="content-img-r"/>
 
-                <h2 class="content-h2">Online Reputation Management</h2>
+                <h2 class="content-h2">Online Reputation<br>Management</h2>
 
                     <p>
                         The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
