fixed links and missing close on a tag

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -20,16 +20,16 @@
 
                 <ul>
 
-                    <li class="nav-li"
-                        <a href="#search-engine-optimization" class="nav-a">Search Engine Optimization</a>
+                    <li class="nav-li">
+                        <a href="./assets/images/search-engine-optimization.jpg" class="nav-a">Search Engine Optimization</a>
                     </li>
 
                     <li class="nav-li">
-                        <a href="#online-reputation-management" class="nav-a">Online Reputation Management</a>
+                        <a href="./assets/images/online-reputation-management.jpg" class="nav-a">Online Reputation Management</a>
                     </li>
 
                     <li class="nav-li">
-                        <a href="#social-media-marketing" class="nav-a">Social Media Marketing</a>
+                        <a href="./assets/images/social-media-marketing.jpg" class="nav-a">Social Media Marketing</a>
                     </li>
 
                 </ul>
