changed css links and nav links with right file path after I moved index.html to root to deploy in git pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./Develop/assets/css/style.css">
         <title>Horiseon Marketing</title>
     </head>
 
@@ -21,15 +21,15 @@
                 <ul>
 
                     <li class="nav-li">
-                        <a href="./assets/images/search-engine-optimization.jpg" class="nav-a">Search Engine Optimization</a>
+                        <a href="./Develop/assets/images/search-engine-optimization.jpg" class="nav-a">Search Engine Optimization</a>
                     </li>
 
                     <li class="nav-li">
-                        <a href="./assets/images/online-reputation-management.jpg" class="nav-a">Online Reputation Management</a>
+                        <a href="./Develop/assets/images/online-reputation-management.jpg" class="nav-a">Online Reputation Management</a>
                     </li>
 
                     <li class="nav-li">
-                        <a href="./assets/images/social-media-marketing.jpg" class="nav-a">Social Media Marketing</a>
+                        <a href="./Develop/assets/images/social-media-marketing.jpg" class="nav-a">Social Media Marketing</a>
                     </li>
 
                 </ul>
