fixed footer and added style using the .class space element method, removed subclass from footer

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <!--This is the container for the footer-->
         <footer class="footer">
 
-            <h2 class="footer-h3">Made with ❤️️ by Horiseon</h2>
+            <h2>Made with ❤️️ by Horiseon</h2>
 
                 <p>
                     &copy; 2019 Horiseon Social Solution Services, Inc.
