SAVE POINT pre-css updates removing a lot of classes and a final readme fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
 
-        <!--This is the header container that includes the name and top bark links-->
+        <!--This is the header container that includes the name and top bar links-->
         <header class="header"> 
 
           <h1 class="header-h1">Hori<span class="header-span">seo</span>n</h1>
