refactored css using combinators to target elements that are children of main classes. Removed classes from html file to cut down on things to track and worry about. Updated readme.

--- a/index.html
+++ b/index.html
@@ -10,26 +10,29 @@
 
     <body>
 
-        <!--This is the header container that includes the name and top bar links-->
+        <!--This is The top Header Container With the Page Header, Nav bar and links -->
         <header class="header"> 
 
-          <h1 class="header-h1">Hori<span class="header-span">seo</span>n</h1>
+          <h1>Hori<span>seo</span>n</h1>
 
-            <!--This is the navigation list container sitting within the header-->
-            <nav class="nav">
+            <!--Navigation Container-->
+            <nav>
 
                 <ul>
 
-                    <li class="nav-li">
-                        <a href="./Develop/assets/images/search-engine-optimization.jpg" class="nav-a">Search Engine Optimization</a>
+                    <!--Links to the search-engine-optimization image stored in the develop / assets images directory-->
+                    <li>
+                        <a href="./Develop/assets/images/search-engine-optimization.jpg">Search Engine Optimization</a>
                     </li>
 
-                    <li class="nav-li">
-                        <a href="./Develop/assets/images/online-reputation-management.jpg" class="nav-a">Online Reputation Management</a>
+                     <!--Links to the online-reputation-mangement image stored in the develop / assets images directory-->
+                    <li>
+                        <a href="./Develop/assets/images/online-reputation-management.jpg">Online Reputation Management</a>
                     </li>
 
-                    <li class="nav-li">
-                        <a href="./Develop/assets/images/social-media-marketing.jpg" class="nav-a">Social Media Marketing</a>
+                     <!--Links to the social-media-marketing image stored in the develop / assets images directory-->
+                    <li>
+                        <a href="./Develop/assets/images/social-media-marketing.jpg">Social Media Marketing</a>
                     </li>
 
                 </ul>
@@ -38,18 +41,18 @@
 
         </header>
 
-        <!--This is a big container that calls an image background specified in css for the hero class-->
+        <!--Large Hero Image Container Formatted in Image Background and Sizing Properties in Style.CSS-->
         <div class="hero"></div> 
 
-        <!--This is the sectin container for main site content seo, rep mgmt and social media marketing-->
+        <!--This is The Main Content Section Including Three DIV Containers For Specific Content Blocks-->
         <section class="content"> 
 
-            <!--This is the container for search-engine optimization content-->
-            <div class="content-box">
+            <!--This is The DIV Container Within The Content Section For SEO-->
+            <div>
+            
+                <img src="./Develop/assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg"  class="content-img-left" />
 
-                <img src="./Develop/assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg"  class="content-img-l" class="float-left" />
-
-                <h2 class="content-h2">Search Engine<br>Optimization</h2>
+                <h2>Search Engine<br>Optimization</h2>
 
                     <p>
                         The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -57,12 +60,12 @@
 
             </div>
 
-            <!--This is the container for online reputation management-->
-            <div class="content-box">
+            <!--This is The DIV Container Within The Content Section For Online Reputation Management-->
+            <div>
 
-                <img src="./Develop/assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="content-img-r"/>
+                <img src="./Develop/assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="content-img-right"/>
 
-                <h2 class="content-h2">Online Reputation<br>Management</h2>
+                <h2>Online Reputation<br>Management</h2>
 
                     <p>
                         The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -70,12 +73,12 @@
 
             </div>
 
-            <!--This is the container for social media marketing-->
-            <div class="content-box">
+            <!--This is The DIV Container Within The Content Section For Social Media Marketing-->
+            <div>
 
-                <img src="./Develop/assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" class="content-img-l" class="float-left" />
+                <img src="./Develop/assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" class="content-img-left" />
 
-                <h2 class="content-h2">Social Media Marketing</h2>
+                <h2>Social Media Marketing</h2>
 
                     <p>
                         Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -85,15 +88,15 @@
 
         </section>
 
-        <!--This is the aside container for benefits lead gen, brand awareness, cost management that sits to the right aside the main content sectoin-->
+        <!--This is the Aside (Right Side of Page) Listing Key Benefits-->
         <aside class="benefits">
 
-            <!--This is the container for lead generation benefit within the aside-->
-            <div class="benefit-box">
+            <!--This is The DIV Container Within The Aside For Lead Generation Benefit-->
+            <div>
 
-                <h3 class="benefit-h3">Lead Generation</h3>
+                <h3>Lead Generation</h3>
 
-                <img src="./Develop/assets/images/lead-generation.png" alt="lead-generation.png" class="benefit-img" />
+                <img src="./Develop/assets/images/lead-generation.png" alt="lead-generation.png" />
 
                     <p>
                         Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -101,12 +104,12 @@
 
             </div>
 
-            <!--This is the container for brand awareness benefit within the aside-->
-            <div class="benefit-box">
+            <!--This is The DIV Container Within The Aside For Brand Awareness Benefit-->
+            <div>
 
-                <h3 class="benefit-h3">Brand Awareness</h3>
+                <h3>Brand Awareness</h3>
 
-                <img src="./Develop/assets/images/brand-awareness.png" alt="brand-awareness.png" class="benefit-img" />
+                <img src="./Develop/assets/images/brand-awareness.png" alt="brand-awareness.png" />
 
                     <p>
                         Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -114,12 +117,12 @@
 
             </div>
 
-            <!--This is the container for cost management benefits within the aside-->
-            <div class="benefit-box">
+            <!--This is The DIV Container Within The Aside For Cost Management Benefit-->
+            <div>
 
-                <h3 class="benefit-h3">Cost Management</h3>
+                <h3>Cost Management</h3>
 
-                <img src=".//Develop/assets/images/cost-management.png" alt="cost-management.png" class="benefit-img"/>
+                <img src=".//Develop/assets/images/cost-management.png" alt="cost-management.png" />
 
                     <p>
                         As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
@@ -129,7 +132,7 @@
 
         </aside>
 
-        <!--This is the container for the footer-->
+        <!--This Is The Footer Container At The Main Page Bottom-->
         <footer class="footer">
 
             <h2>Made with ❤️️ by Horiseon</h2>
