--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./Develop/assets/css/style.css">
+        <link rel="stylesheet" href="./Assets/css/style.css">
         <title>Horiseon Marketing</title>
     </head>
 
@@ -22,17 +22,17 @@
 
                     <!--Links to the search-engine-optimization image stored in the develop / assets images directory-->
                     <li>
-                        <a href="./Develop/assets/images/search-engine-optimization.jpg">Search Engine Optimization</a>
+                        <a href="./Assets/images/search-engine-optimization.jpg">Search Engine Optimization</a>
                     </li>
 
                      <!--Links to the online-reputation-mangement image stored in the develop / assets images directory-->
                     <li>
-                        <a href="./Develop/assets/images/online-reputation-management.jpg">Online Reputation Management</a>
+                        <a href="./Assets/images/online-reputation-management.jpg">Online Reputation Management</a>
                     </li>
 
                      <!--Links to the social-media-marketing image stored in the develop / assets images directory-->
                     <li>
-                        <a href="./Develop/assets/images/social-media-marketing.jpg">Social Media Marketing</a>
+                        <a href="./Assets/images/social-media-marketing.jpg">Social Media Marketing</a>
                     </li>
 
                 </ul>
@@ -50,7 +50,7 @@
             <!--This is The DIV Container Within The Content Section For SEO-->
             <div>
             
-                <img src="./Develop/assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg"  class="content-img-left" />
+                <img src="./Assets/images/search-engine-optimization.jpg" alt="search-engine-optimization.jpg"  class="content-img-left" />
 
                 <h2>Search Engine<br>Optimization</h2>
 
@@ -63,7 +63,7 @@
             <!--This is The DIV Container Within The Content Section For Online Reputation Management-->
             <div>
 
-                <img src="./Develop/assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="content-img-right"/>
+                <img src="./Assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="content-img-right"/>
 
                 <h2>Online Reputation<br>Management</h2>
 
@@ -76,7 +76,7 @@
             <!--This is The DIV Container Within The Content Section For Social Media Marketing-->
             <div>
 
-                <img src="./Develop/assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" class="content-img-left" />
+                <img src="./Assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" class="content-img-left" />
 
                 <h2>Social Media Marketing</h2>
 
@@ -96,7 +96,7 @@
 
                 <h3>Lead Generation</h3>
 
-                <img src="./Develop/assets/images/lead-generation.png" alt="lead-generation.png" />
+                <img src="./Assets/images/lead-generation.png" alt="lead-generation.png" />
 
                     <p>
                         Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -109,7 +109,7 @@
 
                 <h3>Brand Awareness</h3>
 
-                <img src="./Develop/assets/images/brand-awareness.png" alt="brand-awareness.png" />
+                <img src="./Assets/images/brand-awareness.png" alt="brand-awareness.png" />
 
                     <p>
                         Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -122,7 +122,7 @@
 
                 <h3>Cost Management</h3>
 
-                <img src=".//Develop/assets/images/cost-management.png" alt="cost-management.png" />
+                <img src="./Assets/images/cost-management.png" alt="cost-management.png" />
 
                     <p>
                         As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
